--- a/main.ipynb
+++ b/main.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPAJkjryOqpX311CTPdz3gd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +27,32 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "!pip install requests"
+      ],
+      "metadata": {
+        "id": "YfBZjv9j_iVz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "2uOBjr1se8DF"
       },
       "outputs": [],
       "source": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "zOIRXJCb_haE"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
